# github-game-jam-2018

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bundle.sh  debug.sh  doc.sh  lldb_set_breakpoint_run  run.sh  run_stable.sh  watch.sh
assets/prefab/: running.ron
assets/ui/: loading.ron  running.ron
resources/: bindings_config.ron  config.ron  display_config.ron
src/: lib.rs
src/components/: age.rs  basic_velocity.rs  color.rs  constant_velocity.rs  deadly_area.rs  exit.rs  family.rs  indicator.rs  launch_area.rs  mod.rs  physics.rs  remove.rs  shape.rs  spawner.rs  walker.rs
src/config/: camera.rs  levels.rs  mod.rs  pawn.rs  physics.rs  sound.rs  spawner.rs  sprite.rs
src/levels/: level1.rs  mod.rs
src/rendering/: mod.rs
src/resources/: commands.rs  level.rs  mod.rs  physics.rs  sound.rs  spawn_stats.rs  sprites.rs
src/states/: loading.rs  mod.rs  running.rs
src/systems/: age.rs  basic_velocity.rs  bundle.rs  camera_movement.rs  constant_velocity.rs  deadly_area.rs  drop_cube.rs  drop_direction_changer.rs  drop_lift.rs  drop_ram.rs  exit.rs  exodus.rs  family.rs  indicator.rs  launch_area.rs  level.rs  log_fps.rs  matriarch_promote.rs  mod.rs  murder.rs  pawn_movement.rs  physics_step.rs  physics_transform_update.rs  physics_visualizer.rs  player_input.rs  remove.rs  shape_visualizer.rs  spawner.rs  walker.rs
